--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
   },
   "dependencies": {
     "antd": "^4.16.13",
+    "js-cookie": "^3.0.1",
     "next": "12.0.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
+    "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux-logger": "^3.0.9",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "4.4.4"
   }
 }
