--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "antd": "^4.16.13",
     "js-cookie": "^3.0.1",
     "next": "12.0.2",
