--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "sweetalert2": "^11.2.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.1",
